--- a/ShopCet47.Web/Views/Products/Delete.cshtml
+++ b/ShopCet47.Web/Views/Products/Delete.cshtml
@@ -24,12 +24,6 @@
             @Html.DisplayFor(model => model.Price)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.ImageUrl)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ImageUrl)
-        </dd>
-        <dt>
             @Html.DisplayNameFor(model => model.LastPurchase)
         </dt>
         <dd>
@@ -53,11 +47,17 @@
         <dd>
             @Html.DisplayFor(model => model.Stock)
         </dd>
+        <dd>
+            @if (!string.IsNullOrEmpty(Model.ImageUrl))
+            {
+                <img src="@Url.Content(Model.ImageUrl)" alt="image" style="width:300px;height:450px;max-width:100%;height:auto;" />
+            }
+        </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a asp-action="Index" class="btn btn-success">Back to List</a>
     </form>
 </div>
